ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: n8n
  annotations:
    kubernetes.io/ingress.global-static-ip-name: n8n-ingress-ip
    networking.gke.io/managed-certificates: managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "http-to-https"
  labels:
    service: n8n
spec:
  defaultBackend:
    service:
      name: n8n
      port:
        number: 5678
